--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SecondApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<head>
+  <title>SecondApp</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-  <body>
-    <%= yield %>
-  </body>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+</head>
+
+<body class="homepage is-preload">
+  <div id="page-wrapper">
+    <div id="header">
+      <!-- Nav -->
+      <nav id="nav">
+        <ul>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Test", pages_test_path %></li>
+          <li><%= link_to "About Us", pages_about_us_path %></li>
+          <li><%= link_to "Log In", users_login_path %></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="wrapper style2">
+      <article id="main" class="container special">
+        <%= yield %>
+      </article>
+
+    </div>
+    <!-- Footer -->
+    <div id="footer">
+      <div class="container">
+        <div class="row">
+          <!-- Posts -->
+          <section class="col-4 col-12-mobile">
+            <div class="row">
+              <div class="col-12">
+                <!-- Copyright -->
+                <div class="copyright">
+                  <ul class="menu">
+                    <li>© Untitled. All rights reserved.</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                  </ul>
+                </div>
+
+              </div>
+
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%= javascript_include_tag 'application' %>
+</body>
+
 </html>
